--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,45 @@
-# This is a basic workflow to help you get started with Actions
+name: hao4k-checkin-nodejs
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # workflow_dispatch 事件允许您手动触发工作流程
+  workflow_dispatch: 
+    # 可以进行配置手动触发后有选项进行触发
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+  # schedule 事件允许您在计划的时间触发工作流程
+  schedule:
+    # 设置 UTC 时间每天 16:00 自动触发即中国 0:00，github有误差大概在 0:10 左右触发;有需要可以自行更改此文件调整时间
+    # POSIX cron 语法，只有五个域：分 时 日 月 周
+    # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
+    - cron:  0 16,22 * * *  
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  checkin:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    # check-out 仓库中最新的代码到 Workflow 的工作区
+    - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: 安装node
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+ 
+    - name: 安装依赖包
+      run: npm install
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: 运行
+      run: node app.js
+      # 设置环境变量，不同语言获取环境变量方式不同
+      env: 
+        SCKEY: ${{ secrets.SCKEY }}
+        COOKIE: ${{ secrets.COOKIE }}
+        SJCOOKIE: ${{ secrets.SJCOOKIE }}
+        PPTOKEN : ${{ secrets.PPTOKEN }}
+        PDKEY : ${{ secrets.PDKEY  }}
+        BARKKEY : ${{ secrets.BARKKEY  }}
+        BARKSERVER : ${{ secrets.BARKSERVER  }}
+        CHECKHOST : ${{ secrets.CHECKHOST  }}
